--- a/pages/detail.html
+++ b/pages/detail.html
@@ -10,7 +10,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@300;600;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../css/detail.css">
-    <link rel="stylesheet" href="../css/_share.css">
+    <link rel="stylesheet" href="../css/share.css">
     <!-- modified title with js -->
     <title>Detail page</title>
 </head>
